--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "jest --watch"
     },
     "dependencies": {
         "@emotion/react": "^11.11.1",
@@ -25,13 +26,20 @@
         "firebase": "^9.21.0",
         "next": "13.4.10",
         "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "typescript": "5.1.6"
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^14.0.0",
+        "@types/jest": "^29.5.3",
+        "@types/testing-library__jest-dom": "^5.14.9",
         "autoprefixer": "^10.4.14",
         "encoding": "^0.1.13",
+        "jest": "^29.6.1",
+        "jest-environment-jsdom": "^29.6.1",
         "postcss": "^8.4.26",
-        "tailwindcss": "^3.3.3"
+        "tailwindcss": "^3.3.3",
+        "ts-jest": "^29.1.1",
+        "typescript": "^5.1.6"
     }
 }
