--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,13 @@
         "firebase": "^9.21.0",
         "next": "13.4.10",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.45.2"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^29.5.3",
         "@types/testing-library__jest-dom": "^5.14.9",
         "autoprefixer": "^10.4.14",
