--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "firebase-admin": "^11.10.1",
         "pg": "^8.11.1",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.32.1",
