--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "npx ts-node-dev --inspect=0.0.0.0:9229 --transpile-only --respawn -- src/server.ts",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "NODE_ENV=test jest --watchAll"
     },
     "author": "",
     "license": "ISC",
@@ -22,8 +22,13 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.3",
         "@types/node": "^20.4.1",
         "@types/strong-error-handler": "^3.2.1",
+        "faker": "^6.6.6",
+        "jest": "^29.6.1",
+        "sequelize-cli": "^6.6.1",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.1.6"
