feat: add routes with service/tests for submitting quiz, and getting quizzes, add swagger-js-doc for all routes

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -11,6 +11,6 @@
         "skipLibCheck": true,
         "esModuleInterop": true
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "swagger.ts"],
     "exclude": ["node_modules"]
 }
