--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.32.1",
         "sequelize-typescript": "^2.1.5",
-        "strong-error-handler": "^4.0.6"
+        "strong-error-handler": "^4.0.6",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
