--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
         "firebase": "^9.21.0",
         "next": "13.4.10",
         "react": "18.2.0",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.45.2"
     },
@@ -34,6 +35,7 @@
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^29.5.3",
+        "@types/react-copy-to-clipboard": "^5.0.4",
         "@types/testing-library__jest-dom": "^5.14.9",
         "autoprefixer": "^10.4.14",
         "encoding": "^0.1.13",
