--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
         "react": "18.2.0",
         "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "18.2.0",
-        "react-hook-form": "^7.45.2"
+        "react-hook-form": "^7.45.2",
+        "sass": "^1.64.1"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.17.0",
